[package]
name = "zcrape"
version = "0.1.0"
authors = ["pksebben <benmorsillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
serde = {version = "1.0.117", features = ["derive", "std", "alloc"]}
serde_json = "1.0.59"
subprocess = "0.1.13"
rusqlite = {version = "0.24.1", features = ["load_extension", "bundled"]}
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"